@@ -1,5 +1,7 @@
 0.33
 
+  Support "module" plugins ("My::Plugin" in the config/plugins file)
+
   Add SSL encryption method to header to mirror other qmail/SSL patches.
   Add tls_before_auth to suppress AUTH unless TLS has already been 
   established (Robin Johnson).
